my_CDLNet/slurm/logs/slurm_4530548.err
Traceback (most recent call last):
  File "/vast/ee2178/Denoising-Diffusion-Project/my_CDLNet/train_mri_recon.py", line 10, in <module>
    from train_utils import awgn
  File "/vast/ee2178/Denoising-Diffusion-Project/my_CDLNet/train_utils.py", line 4
    from math import math.pi
                         ^
SyntaxError: invalid syntax
